feat: upgrade itinerary prettifier CLI